--- a/PPMV2.Web/appsettings.json
+++ b/PPMV2.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     //"PPMConnection": "Server=DESKTOP-ALB1AB3;Initial Catalog=PPMV2;Persist Security Info=True;User ID=sa;Password=Bhashkar@01;MultipleActiveResultSets=True;"
-    "PPMConnection": "Server=DESKTOP-49EHAG1;Initial Catalog=PPMV2;Persist Security Info=True;User ID=sa;Password=sql@1234;MultipleActiveResultSets=True;"
+    "PPMConnection": "Server=DESKTOP-49EHAG1;Initial Catalog=PPMV2_db;Persist Security Info=True;User ID=sa;Password=sql@1234;MultipleActiveResultSets=True;"
   },
 
   "Logging": {
