--- a/PPMV2.Web/appsettings.json
+++ b/PPMV2.Web/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
     //"PPMConnection": "Server=DESKTOP-ALB1AB3;Initial Catalog=PPMV2;Persist Security Info=True;User ID=sa;Password=Bhashkar@01;MultipleActiveResultSets=True;"
-    "PPMConnection": "Server=DESKTOP-49EHAG1;Initial Catalog=PPMV2_Final;Persist Security Info=True;User ID=sa;Password=sql@1234;MultipleActiveResultSets=True;",
+    //"PPMConnection": "Server=DESKTOP-49EHAG1;Initial Catalog=PPMV2_Final;Persist Security Info=True;User ID=sa;Password=sql@1234;MultipleActiveResultSets=True;",
     //"PPMConnection": "Server=SMAJI-LAPTOP;Initial Catalog=PPMV2_db;Persist Security Info=True;User ID=sa;Password=sql@1234;MultipleActiveResultSets=True;"
-    //"PPMConnection": "Server=SUBHRAJIT;Initial Catalog=PPMV2_db;Persist Security Info=True;User ID=sa;Password=sap@123;MultipleActiveResultSets=True;"
+    "PPMConnection": "Server=SUBHRAJIT;Initial Catalog=PPMV2_db;Persist Security Info=True;User ID=sa;Password=sap@123;MultipleActiveResultSets=True;"
 
   },
 
@@ -13,5 +13,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  //"PassEncryptionKey": {
+  //  "key": "PassEncryptionKey",
+  //  "value": "zB064QlTzhrrNqBlGh5ibIzdYGsqHleZ"
+  //},
   "AllowedHosts": "*"
 }
